<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".create_post">

    <EditText
        android:id="@+id/postName"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="46dp"
        android:layout_marginLeft="46dp"
        android:layout_marginBottom="155dp"
        android:autofillHints=""
        android:hint="@string/post_name"
        android:inputType="text" />

    <ImageView
        android:id="@+id/post_Photo"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/ic_photo"
        android:contentDescription="@string/todo"
        android:hint="@string/click_here_to_add_photo"/>

    <EditText
        android:id="@+id/postDescription"
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="46dp"
        android:layout_marginLeft="46dp"
        android:layout_marginBottom="31dp"
        android:autofillHints=""
        android:hint="Describe what you did!"
        android:inputType="text" />

    <EditText
        android:id="@+id/postDate"
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginBottom="98dp"
        android:hint="Date"
        android:inputType="date" />

    <ImageButton
        android:id="@+id/photo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/post_Photo"
        android:layout_alignStart="@+id/postDate"
        app:srcCompat="@drawable/ic_darkpoto" />

</RelativeLayout>